--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   "dependencies": {
     "@vitejs/plugin-react": "^1.2.0",
     "electron-is-dev": "^2.0.0",
+    "puppeteer": "^21.5.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "vite": "^2.8.6"
